--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("");
+  background-image: url("https://th.bing.com/th/id/OIP.uUBmT-1TZKYRMwybILJRlAHaEK?w=287&h=180&c=7&r=0&o=5&dpr=1.25&pid=1.7");
   
   background-position: center;
   background-repeat: no-repeat;
