--- a/index.css
+++ b/index.css
@@ -1,11 +1,13 @@
 body {
-  background-image: url("https://th.bing.com/th/id/OIP.uUBmT-1TZKYRMwybILJRlAHaEK?w=287&h=180&c=7&r=0&o=5&dpr=1.25&pid=1.7");
-  
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  
+      padding: 2em;
+background: url(https://wallpapercave.com/wp/wp3771737.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
+
+
+
 }
 
 /* navbar */
